# duty

./: .gitignore  Cargo.toml  README.md
duty/: Cargo.toml
duty/examples/: local_client.rs  local_worker.rs  ssh_client.rs  ssh_worker.rs  tcp_client.rs  tcp_server.rs  ttv_calc.rs  ttv_calculator.rs
duty/src/: client.rs  dispatcher.rs  error.rs  lib.rs  procedure.rs  readwrite.rs  server.rs  ssh.rs  stream.rs  transport.rs
duty/tests/: loopback.rs  loopback_generic.rs  raw_loopback.rs  raw_single_proc.rs
duty_attrs/: Cargo.toml
duty_attrs/src/: lib.rs
src/: error.rs  lib.rs
