[package]
name = "duty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
duty_attrs = { path = "../duty_attrs" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
