[package]
name = "duty"
version = "0.1.0"
edition = "2021"
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
duty_attrs = { path = "../duty_attrs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
readwrite = "0.2"
ssh2 = "0.9"

[[example]]
name = "local_client"

[[example]]
name = "local_worker"

[[example]]
name = "tcp_client"

[[example]]
name = "tcp_server"

[[example]]
name = "ssh_client"
