[package]
name = "duty_attrs"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
